# customer-intelligence-platform

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
api/: main.py
churn/: train_churn.py
dashboard/: Home.py  app_utils.py
dashboard/pages/: 1_Segmentation.py  2_Churn_and_LTV.py  3_Retention_Simulator.py
docs/: architecture.md  interview_guide.md  model_card.md
ltv/: train_ltv.py
notebooks/: README.md
recommendation/: generate_recommendations.py
segmentation/: run_segmentation.py
sql/: schema.sql
src/customer_intelligence/: __init__.py  config.py  inference.py  mlflow_tracking.py  pipeline.py
src/customer_intelligence/business/: __init__.py  kpis.py  personas.py  recommendations.py  revenue_simulator.py
src/customer_intelligence/data/: ingestion.py  validation.py
src/customer_intelligence/features/: build_features.py
src/customer_intelligence/models/: __init__.py  churn.py  explainability.py  ltv.py  segmentation.py
src/customer_intelligence/monitoring/: __init__.py  performance.py
tests/: test_business_logic.py  test_features.py  test_model_risk_controls.py  test_validation.py
