[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "customer-intelligence-platform"
version = "0.1.0"
description = "IBM Telco customer churn intelligence platform with segmentation, churn, LTV, recommendations, and dashboard."
requires-python = ">=3.9"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src", "."]
testpaths = ["tests"]

[tool.ruff]
line-length = 120
target-version = "py311"
